# emulator101

./: .gitignore  Cargo.toml  disassemble.txt  disassemble_diag.txt  opcodes.txt
src/: diag.rs  disassembler.rs  emulator.rs  error.rs  lib.rs  main.rs  ops.rs  space_invaders.rs
src/cpu/: disassembler.rs  emulate.rs  instructions.rs  mod.rs
src/emulator/: emulate.rs  instructions.rs  mod.rs  state.rs
src/machine/: display.rs  error.rs  memory.rs  mod.rs  rom.rs
src/machine/cpu/: disassembler.rs  emulate.rs  error.rs  instructions.rs  mod.rs  ops.rs
