cargo-features = ["edition"]

[package]
name = "emulator"
version = "0.1.0"
authors = ["Davis Wahl <daviswahl@gmail.com>"]
edition = '2018'

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
num = "0.2"
# futures-preview = "0.3.0-alpha.3"
ggez = "0.4"
rand = "0.4"
failure = "0.1"
crossbeam-channel = "0.2"
ringbuffer = { git = "https://github.com/daviswahl/ringbuffer.git" }
lazy_static = "1.1.0"